[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features=["full"] }
tokio-stream = "0.1.11"
futures = "0.3.25"